# demo_rag

./: .gitattributes  .mcp.json  README.md  build-resolved-docs.ps1  refresh-sdk-nrf-bm.sh  sdk-nrf-bm.md
docker/: build-docs.sh  constraints.txt  ncs-1.6.1-docs.Dockerfile
docs/: build-ncs-1.6.1-doc.md  ncs-docs-mcp-build-guide.md  ncs-source-kb-remaining.md
docs/ideas/: docs-access-recommendation.md
ncs-1.6.1-docs/: MANIFEST.md
ncs-docs-mcp/: .gitignore  README.md  build_index.py  pyproject.toml
ncs-docs-mcp/ncs_docs_mcp/: __init__.py  chunker.py  embed.py  server.py
sdk-docs-mcp/: .gitignore  README.md  build_index.py  pyproject.toml
sdk-docs-mcp/sdk_docs_mcp/: __init__.py  code_chunker.py  html_chunker.py  server.py  store.py
sdk-docs-mcp/tests/: test_code_chunker.py  test_html_chunker.py
sdk-nrf-bm/: MANIFEST.md
